--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -1,269 +1,95 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="j1App.cpp" />
-    <ClCompile Include="j1Scene.cpp" />
-    <ClCompile Include="p2Log.cpp">
-      <Filter>Tools</Filter>
-    </ClCompile>
-    <ClCompile Include="PugiXml\src\pugixml.cpp">
-      <Filter>Tools</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Audio.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Input.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Map.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1PerfTimer.cpp">
-      <Filter>Tools</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Timer.cpp">
-      <Filter>Tools</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Render.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Textures.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Window.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
+    <ClCompile Include="ChangeControls.cpp" />
+    <ClCompile Include="DynamicEntity.cpp" />
+    <ClCompile Include="EasingSplines.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GUI_CheckBox.cpp" />
+    <ClCompile Include="GUI_Slider.cpp" />
+    <ClCompile Include="j1Collisions.cpp" />
+    <ClCompile Include="j1DialogSystem.cpp" />
+    <ClCompile Include="j1EntityManager.cpp" />
+    <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="GUI_Button.cpp" />
+    <ClCompile Include="GUI_Image.cpp" />
+    <ClCompile Include="GUI_Label.cpp" />
+    <ClCompile Include="j1FadeToBlack.cpp" />
+    <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Main.cpp" />
-    <ClCompile Include="j1UIManager.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI.cpp">
-      <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI_Image.cpp">
-      <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="DynamicEntity.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Pathfinding.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="MainMenu.cpp">
-      <Filter>UI\UIScenes</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI_Button.cpp">
-      <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Fonts.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI_Label.cpp">
-      <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="j1EntityManager.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1FadeToBlack.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticEntity.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Sensor.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
+    <ClCompile Include="j1App.cpp" />
+    <ClCompile Include="j1Audio.cpp" />
+    <ClCompile Include="j1Input.cpp" />
+    <ClCompile Include="j1Map.cpp" />
     <ClCompile Include="j1Module.cpp" />
-    <ClCompile Include="EasingSplines.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Collisions.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI_Slider.cpp">
-      <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI_CheckBox.cpp">
-      <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="ChangeControls.cpp">
-      <Filter>Tools</Filter>
-    <ClCompile Include="j1DialogSystem.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
+    <ClCompile Include="j1Pathfinding.cpp" />
+    <ClCompile Include="j1PerfTimer.cpp" />
+    <ClCompile Include="j1Scene.cpp" />
+    <ClCompile Include="j1Timer.cpp" />
+    <ClCompile Include="j1UIManager.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="p2Log.cpp" />
+    <ClCompile Include="j1Render.cpp" />
+    <ClCompile Include="j1Textures.cpp" />
+    <ClCompile Include="j1Window.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PugiXml\src\pugixml.cpp" />
+    <ClCompile Include="Sensor.cpp" />
+    <ClCompile Include="StaticEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ChangeControls.h" />
+    <ClInclude Include="GUI_CheckBox.h" />
+    <ClInclude Include="DynamicEntity.h" />
+    <ClInclude Include="EasingSplines.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="GUI_Slider.h" />
+    <ClInclude Include="j1Collisions.h" />
+    <ClInclude Include="j1DialogSystem.h" />
+    <ClInclude Include="j1EntityManager.h" />
+    <ClInclude Include="GUI.h" />
+    <ClInclude Include="GUI_Button.h" />
+    <ClInclude Include="GUI_Image.h" />
+    <ClInclude Include="GUI_Label.h" />
+    <ClInclude Include="j1FadeToBlack.h" />
+    <ClInclude Include="j1Fonts.h" />
+    <ClInclude Include="j1Map.h" />
+    <ClInclude Include="j1Pathfinding.h" />
+    <ClInclude Include="j1PerfTimer.h" />
     <ClInclude Include="j1Scene.h" />
+    <ClInclude Include="j1Timer.h" />
+    <ClInclude Include="j1UIManager.h" />
+    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="p2Animation.h" />
+    <ClInclude Include="j1Audio.h" />
+    <ClInclude Include="j1Input.h" />
+    <ClInclude Include="p2Line.h" />
+    <ClInclude Include="p2Log.h" />
     <ClInclude Include="j1App.h" />
-    <ClInclude Include="PugiXml\src\pugixml.hpp">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Animation.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Defs.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Log.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Point.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="PugiXml\src\pugiconfig.hpp">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Audio.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Input.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Map.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Module.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1PerfTimer.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Timer.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Render.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Textures.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Window.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1UIManager.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI.h">
-      <Filter>UI</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI_Image.h">
-      <Filter>UI</Filter>
-    </ClInclude>
-    <ClInclude Include="DynamicEntity.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Pathfinding.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="MainMenu.h">
-      <Filter>UI\UIScenes</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI_Button.h">
-      <Filter>UI</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Fonts.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI_Label.h">
-      <Filter>UI</Filter>
-    </ClInclude>
-    <ClInclude Include="j1EntityManager.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="j1FadeToBlack.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticEntity.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="Sensor.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Properties.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="EasingSplines.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="p2Line.h">
-      <Filter>Tools</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Collisions.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI_Slider.h">
-      <Filter>UI</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI_CheckBox.h">
-      <Filter>UI</Filter>
-    </ClInclude>
-    <ClInclude Include="ChangeControls.h">
-      <Filter>Tools</Filter>
-    <ClInclude Include="j1DialogSystem.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
+    <ClInclude Include="p2Defs.h" />
+    <ClInclude Include="j1Module.h" />
+    <ClInclude Include="p2Point.h" />
+    <ClInclude Include="j1Render.h" />
+    <ClInclude Include="j1Textures.h" />
+    <ClInclude Include="j1Window.h" />
+    <ClInclude Include="p2Properties.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
+    <ClInclude Include="PugiXml\src\pugixml.hpp" />
+    <ClInclude Include="Sensor.h" />
+    <ClInclude Include="StaticEntity.h" />
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Tools">
-      <UniqueIdentifier>{53c9586e-883c-4cf1-95be-7aaf09b4b478}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Modules">
-      <UniqueIdentifier>{804bbdb1-912f-4a2f-9648-b2d6d259c2b9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI">
-      <UniqueIdentifier>{6f64259e-ef41-4893-a604-31cb0faf9493}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Entities">
-      <UniqueIdentifier>{293d05cb-82cb-4ce2-b8a9-f1269d39697a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\UIScenes">
-      <UniqueIdentifier>{e1b0415c-a1b7-4b7e-9bfe-da567a1d1330}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="XML">
-      <UniqueIdentifier>{c068a6e9-159c-4650-bf99-5d0564514ac0}</UniqueIdentifier>
-    </Filter>
+    <Xml Include="Game\config.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="Game\config.xml">
-      <Filter>XML</Filter>
-    </Xml>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Game\entities\Player.tsx">
-      <Filter>XML</Filter>
-    </None>
-    <None Include="Game\entities\Enemy.tsx">
-      <Filter>XML</Filter>
-    </None>
-    <None Include="Game\maps\iso_walk.tmx">
-      <Filter>XML</Filter>
-    </None>
-    <None Include="Game\maps\iso_walk2.tmx">
-      <Filter>XML</Filter>
-    </None>
-    <None Include="Game\entities\WarriorSpritesheet.tsx">
-      <Filter>XML</Filter>
-    </None>
-    <None Include="Game\maps\Tutorial_Movement.tmx">
-      <Filter>XML</Filter>
-    </None>
+    <None Include="Game\entities\Enemy.tsx" />
+    <None Include="Game\entities\Player.tsx" />
+    <None Include="Game\entities\WarriorSpritesheet.tsx" />
+    <None Include="Game\maps\iso_walk.tmx" />
+    <None Include="Game\maps\iso_walk2.tmx" />
+    <None Include="Game\maps\Tutorial_Movement.tmx" />
   </ItemGroup>
 </Project>
