--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -80,85 +80,85 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ChangeControls.cpp" />
-    <ClCompile Include="DynamicEntity.cpp" />
-    <ClCompile Include="EasingSplines.cpp" />
-    <ClCompile Include="Enemy.cpp" />
-    <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="GUI_CheckBox.cpp" />
-    <ClCompile Include="GUI_Slider.cpp" />
-    <ClCompile Include="j1Collisions.cpp" />
-    <ClCompile Include="j1DialogSystem.cpp" />
-    <ClCompile Include="j1EntityManager.cpp" />
-    <ClCompile Include="GUI.cpp" />
-    <ClCompile Include="GUI_Button.cpp" />
-    <ClCompile Include="GUI_Image.cpp" />
-    <ClCompile Include="GUI_Label.cpp" />
-    <ClCompile Include="j1FadeToBlack.cpp" />
-    <ClCompile Include="j1Fonts.cpp" />
-    <ClCompile Include="j1Main.cpp" />
-    <ClCompile Include="j1App.cpp" />
-    <ClCompile Include="j1Audio.cpp" />
-    <ClCompile Include="j1Input.cpp" />
-    <ClCompile Include="j1Map.cpp" />
-    <ClCompile Include="j1Module.cpp" />
-    <ClCompile Include="j1Pathfinding.cpp" />
-    <ClCompile Include="j1PerfTimer.cpp" />
-    <ClCompile Include="j1Scene.cpp" />
-    <ClCompile Include="j1Timer.cpp" />
-    <ClCompile Include="j1UIManager.cpp" />
-    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="p2ChangeControls.cpp" />
+    <ClCompile Include="e1DynamicEntity.cpp" />
+    <ClCompile Include="m1EasingSplines.cpp" />
+    <ClCompile Include="e1Enemy.cpp" />
+    <ClCompile Include="e1Entity.cpp" />
+    <ClCompile Include="u1CheckBox.cpp" />
+    <ClCompile Include="u1Slider.cpp" />
+    <ClCompile Include="m1Collisions.cpp" />
+    <ClCompile Include="m1DialogSystem.cpp" />
+    <ClCompile Include="m1EntityManager.cpp" />
+    <ClCompile Include="u1UI_Element.cpp" />
+    <ClCompile Include="u1Button.cpp" />
+    <ClCompile Include="u1Image.cpp" />
+    <ClCompile Include="u1Label.cpp" />
+    <ClCompile Include="m1FadeToBlack.cpp" />
+    <ClCompile Include="m1Fonts.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="m1Audio.cpp" />
+    <ClCompile Include="m1Input.cpp" />
+    <ClCompile Include="m1Map.cpp" />
+    <ClCompile Include="m1Module.cpp" />
+    <ClCompile Include="m1Pathfinding.cpp" />
+    <ClCompile Include="p2PerfTimer.cpp" />
+    <ClCompile Include="m1Scene.cpp" />
+    <ClCompile Include="p2Timer.cpp" />
+    <ClCompile Include="m1GUI.cpp" />
+    <ClCompile Include="m1MainMenu.cpp" />
     <ClCompile Include="p2Log.cpp" />
-    <ClCompile Include="j1Render.cpp" />
-    <ClCompile Include="j1Textures.cpp" />
-    <ClCompile Include="j1Window.cpp" />
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="m1Render.cpp" />
+    <ClCompile Include="m1Textures.cpp" />
+    <ClCompile Include="m1Window.cpp" />
+    <ClCompile Include="e1Player.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
-    <ClCompile Include="Sensor.cpp" />
-    <ClCompile Include="StaticEntity.cpp" />
+    <ClCompile Include="e1Sensor.cpp" />
+    <ClCompile Include="e1StaticEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ChangeControls.h" />
-    <ClInclude Include="GUI_CheckBox.h" />
-    <ClInclude Include="DynamicEntity.h" />
-    <ClInclude Include="EasingSplines.h" />
-    <ClInclude Include="Enemy.h" />
-    <ClInclude Include="Entity.h" />
-    <ClInclude Include="GUI_Slider.h" />
-    <ClInclude Include="j1Collisions.h" />
-    <ClInclude Include="j1DialogSystem.h" />
-    <ClInclude Include="j1EntityManager.h" />
-    <ClInclude Include="GUI.h" />
-    <ClInclude Include="GUI_Button.h" />
-    <ClInclude Include="GUI_Image.h" />
-    <ClInclude Include="GUI_Label.h" />
-    <ClInclude Include="j1FadeToBlack.h" />
-    <ClInclude Include="j1Fonts.h" />
-    <ClInclude Include="j1Map.h" />
-    <ClInclude Include="j1Pathfinding.h" />
-    <ClInclude Include="j1PerfTimer.h" />
-    <ClInclude Include="j1Scene.h" />
-    <ClInclude Include="j1Timer.h" />
-    <ClInclude Include="j1UIManager.h" />
-    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="p2ChangeControls.h" />
+    <ClInclude Include="u1CheckBox.h" />
+    <ClInclude Include="e1DynamicEntity.h" />
+    <ClInclude Include="m1EasingSplines.h" />
+    <ClInclude Include="e1Enemy.h" />
+    <ClInclude Include="e1Entity.h" />
+    <ClInclude Include="u1Slider.h" />
+    <ClInclude Include="m1Collisions.h" />
+    <ClInclude Include="m1DialogSystem.h" />
+    <ClInclude Include="m1EntityManager.h" />
+    <ClInclude Include="u1UI_Element.h" />
+    <ClInclude Include="u1Button.h" />
+    <ClInclude Include="u1Image.h" />
+    <ClInclude Include="u1Label.h" />
+    <ClInclude Include="m1FadeToBlack.h" />
+    <ClInclude Include="m1Fonts.h" />
+    <ClInclude Include="m1Map.h" />
+    <ClInclude Include="m1Pathfinding.h" />
+    <ClInclude Include="p2PerfTimer.h" />
+    <ClInclude Include="m1Scene.h" />
+    <ClInclude Include="p2Timer.h" />
+    <ClInclude Include="m1GUI.h" />
+    <ClInclude Include="m1MainMenu.h" />
     <ClInclude Include="p2Animation.h" />
-    <ClInclude Include="j1Audio.h" />
-    <ClInclude Include="j1Input.h" />
+    <ClInclude Include="m1Audio.h" />
+    <ClInclude Include="m1Input.h" />
     <ClInclude Include="p2Line.h" />
     <ClInclude Include="p2Log.h" />
-    <ClInclude Include="j1App.h" />
+    <ClInclude Include="App.h" />
     <ClInclude Include="p2Defs.h" />
-    <ClInclude Include="j1Module.h" />
+    <ClInclude Include="m1Module.h" />
     <ClInclude Include="p2Point.h" />
-    <ClInclude Include="j1Render.h" />
-    <ClInclude Include="j1Textures.h" />
-    <ClInclude Include="j1Window.h" />
+    <ClInclude Include="m1Render.h" />
+    <ClInclude Include="m1Textures.h" />
+    <ClInclude Include="m1Window.h" />
     <ClInclude Include="p2Properties.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="e1Player.h" />
     <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
-    <ClInclude Include="Sensor.h" />
-    <ClInclude Include="StaticEntity.h" />
+    <ClInclude Include="e1Sensor.h" />
+    <ClInclude Include="e1StaticEntity.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Game\config.xml">
@@ -169,9 +169,6 @@
     <None Include="Game\entities\Enemy.tsx" />
     <None Include="Game\entities\Player.tsx" />
     <None Include="Game\entities\WarriorSpritesheet.tsx" />
-    <None Include="Game\maps\iso_walk.tmx" />
-    <None Include="Game\maps\iso_walk2.tmx" />
-    <None Include="Game\maps\Tutorial_Movement.tmx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
