--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -298,6 +298,7 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Game\assets\xml\config.xml" />
+    <Xml Include="Game\assets\xml\Scene1.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Game\entities\Enemy.tsx">
