--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -141,6 +141,12 @@
     <ClCompile Include="e1Warrior.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="e1Archer.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="e1Mage.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="e1CarnivorousPlant.h">
@@ -315,6 +321,12 @@
       <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="e1Warrior.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="e1Archer.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="e1Mage.h">
       <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
