--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="e1Mage.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="e1StrangeFrog.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="e1CarnivorousPlant.h">
@@ -327,6 +330,9 @@
       <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="e1Mage.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="e1StrangeFrog.h">
       <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
