--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -150,6 +150,24 @@
     <ClCompile Include="e1StrangeFrog.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="p1Follow.cpp">
+      <Filter>Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="p1Particle.cpp">
+      <Filter>Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="p1Explosion.cpp">
+      <Filter>Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="p1Fire.cpp">
+      <Filter>Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="p1Firework.cpp">
+      <Filter>Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="m1ParticleManager.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="e1CarnivorousPlant.h">
@@ -335,6 +353,24 @@
     <ClInclude Include="e1StrangeFrog.h">
       <Filter>Entities</Filter>
     </ClInclude>
+    <ClInclude Include="p1Follow.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="p1Particle.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="p1Explosion.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="p1Fire.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="p1Firework.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="m1ParticleManager.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
@@ -364,6 +400,9 @@
     <ClInclude Include="App.h" />
     <Filter Include="Cutscene">
       <UniqueIdentifier>{f24df7fb-cdae-46b2-8070-e79090694788}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Particles">
+      <UniqueIdentifier>{d54c014f-ca6d-4221-8d73-cf663d117b50}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
